@@ -1,6 +1,7 @@
 2021-10-28  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/core_loading_thread.rb: Added
+	* examples/bitmap_font.rb and font/VP16Font_XNA.png: Added
 
 2021-10-27  vaiorabbit  <http://twitter.com/vaiorabbit>
 
